--- a/Views/MonthlyEmi/DisplayInfo.cshtml
+++ b/Views/MonthlyEmi/DisplayInfo.cshtml
@@ -1,4 +1,3 @@
-﻿
 @{
     ViewData["Title"] = "DisplayInfo";
 }
@@ -9,7 +8,9 @@
 
     </head>
     <body>
-        <h1>DisplayInfo</h1>
-        <h3>Monthly Emi = @Model.Result</h3>
+        <h3>Calculated Results </h3>
+        <h4>Monthly Emi = @Model.MonthlyEmi</h4>
+        <h4>Daily Emi = @Model.DailyEmi</h4>
+        <h4>Continous Emi = @Model.ContinousEmi</h4>
     </body>
 </html>
