--- a/Views/MonthlyEmi/Index.cshtml
+++ b/Views/MonthlyEmi/Index.cshtml
@@ -12,7 +12,7 @@
 
     </header>
     <body>
-       <form method="post" action="MonthlyEmi/DisplayInfo">
+       <form method="post" action="Emi/DisplayInfo">
       <br />
       <label>Principal Amount : </label>
      <input type="text" name="principal">
